2000-12-14  Charles Kerr <charles@superpimp.org>

	* gmime-messge.c (g_mime_message_get_message_id):  change
	g_return_if_fail() to g_return_val_if_fail() to ensure that
	a value is always returned.

	* gmime-part.h (g_mime_part_get_content_description): make
	the GMimePart argument const.
	* gmime-part.h (g_mime_part_get_content): same.

	* test-mime.c (test_addresses): fix bad printf statement.

	* test-parser.c (test_parser): fixed the printf type of a time_t
	from an int to unsigned long to avoid compiler warnings.

2000-12-13  Jeffrey Stedfast  <fejj@helixcode.com>

	* doc/sgml/*:
	* doc/html/*:
	* doc/gmime-sections.txt: Updated.

	* README: Updated version line to 0.3.0

2000-12-12  Jeffrey Stedfast  <fejj@helixcode.com>

	* gmime-part.c (g_mime_part_to_string): Wrap some content-*
	headers that might sometimes be long.

	* gmime-message.c (create_header): Updated to reflect function
	name changes/moves.

	* gmime-utils.c (g_mime_utils_header_printf): Moved here from
	gmime-message.c and slightly renamed ;-)
	(g_mime_utils_header_fold): Moved from being private to being
	public.

2000-12-12  Jeffrey Stedfast  <fejj@helixcode.com>

	* gmime-part.c: Hmmm, why weren't multiparts using the internal
	get_content_type function rather than ...content_type_to_string?
	Possible FIXME: Should content_type_to_string do what
	get_content_type does? or should it remain untouched and just
	return "type/subtype"?

	* gmime-part.h: No more boundary data member.

	* gmime-part.c (g_mime_part_get_boundary): Updated, as we no
	longer store the boundary on the MIME Part and instead only on the
	content-type (where it belongs).
	(g_mime_part_set_boundary): And here too.
	(g_mime_part_destroy): No longer need to destroy the boundary.

2000-12-11  Jeffrey Stedfast  <fejj@helixcode.com>

	* gmime-part.c (g_mime_part_get_subpart_from_content_id): Erm,
	smack me. This needs to be recursive (this is what happens when I
	code really late at night).
